--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Profil Saya</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Reza Dwi Rachadia | Profil</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(to right, #6a11cb, #2575fc); /* Gradient background */
+      color: white;
+    }
+    .jumbotron {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 8px;
+      padding: 30px;
+      text-align: center;
+    }
+    footer {
+      color: rgba(255, 255, 255, 0.7);
+    }
+  </style>
 </head>
-<body>
-  <h1>Halo, saya Reza Dwi Rachadia</h1>
-  <p>Saya dari Universitas Budi Luhur</p>
+<body class="text-center py-5">
+
+  <div class="container">
+    <!-- Jumbotron section -->
+    <div class="jumbotron mb-5">
+      <h1>Halo, saya Reza Dwi Rachadia</h1>
+      <p>Saya dari Universitas Budi Luhur</p>
+    </div>
+
+    <img src="pasfoto.jpg" alt="Foto Reza Dwi Rachadia" class="rounded shadow mb-4" style="width: 180px;">
+    <h1 class="mb-2">Reza Dwi Rachadia</h1>
+    <p class="mb-1"><strong>NIM:</strong> 2212501395</p>
+    <p class="mb-1">Sistem Informasi, Universitas Budi Luhur</p>
+    <p class="mb-3">Angkatan 2022</p>
+    <footer class="text-muted mt-5">&copy; 2025 Reza Dwi Rachadia</footer>
+  </div>
+
 </body>
 </html>
